	  additionally, functions with ids < 0x400 are considered to be 'shape#' and
	  functions with ids < 0x800 are considered to be 'object#'. UCC will display
	  tons of warnings and errors related to this to ensure 'proper' coding.
	  Also, Exult Studio has been updated to accept only 'object#' or 'shape#'
	  functions for eggs, NPCs, etc.

2007-08-14    <jeff@mini.nerble.net>

	* objs/animate.cc (Frame_animator): Re-initialize animator if
	frame got set outside valid range.  Fixed problem with water of
	ethicality in SI.  (Not sure if this is the best fix...)

2007-07-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Don't use exceptions for patch music flexes.
	* audio/midi_drivers/LowLevelMidiDriver.cpp: Destroy cond also when the
	  driver is destroyed.
	* usecode/compiler/ucfun.cc: Only add terminating return opcode to functions
	  that don't already have one.

2007-07-12  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/midi_drivers/* : Changes to the MidiDriver code as per Exult 
	  bug report 1750743, with additional changes to ensure that it actually
	  works properly in all cases. Also fixed possible problems with sequence
	  speed being set to 0, notes being cut off early at the end of a song and 
	  renamed some variables so they properly relfect what they actually are.
	* msvcstuff/wud.vcproj : Changes so this project compiles

2007-07-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc, files/databuf.h: Removed OVectorDataSource in favor of
	  StreamDataSource + stringstream. Added 'write' virtual method to
	  DataSource which writes a string to the source.
	* mapedit/*: Removed unused definitions.
	* gamedat.cc, gamewin.h: Fixed flex multimap savegames to save an inner
	  flex (containing the IREG files) for each map after the first.

2007-07-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug which would cause a purple outline to be displayed around NPCs
	  during some animations in recent snapshots of Exult.